[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11",
  "mypy",
  "numpy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = ["src/scarabee/_scarabee"]

[project]
name = "scarabee"
version = "0.1.0"
authors = [
  {name = "Hunter Belanger", email = "hunter.belanger@gmail.com"},
]
description = "A lattice physics code for LWR analysis."
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]