[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11",
  "mypy",
  "numpy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = ["src/scarabee/_scarabee"]

[project]
name = "scarabee"
version = "0.1.0"
authors = [
  {name = "Hunter Belanger", email = "hunter.belanger@gmail.com"},
]
description = "A lattice physics code for LWR analysis."
requires-python = ">=3.9"
keywords = ["lattice physics", "reactor physics", "neutron transport", "LWR"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[project.urls]
homepage = "https://scarabee.readthedocs.io/en/latest/"
documentation = "https://scarabee.readthedocs.io/en/latest/"
source = "https://github.com/HunterBelanger/scarabee"

[tool.cibuildwheel]
skip = ["*musllinux*", "pp*"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "aarch64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = "dnf install -y libxkbcommon-devel libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel"